# summer-school-2024

./: .gitignore  LICENSE  README.md  install.sh
.ci/: install.sh  run.sh
.github/workflows/: bionic.yml  focal.yml  jammy.yml
mrim_task/mrim_manager/: CMakeLists.txt  package.xml  setup.py
mrim_task/mrim_manager/config/: default_offline.yaml  default_realworld.yaml  default_simulation.yaml  default_uav.yaml
mrim_task/mrim_manager/config/rviz/: offline.rviz  realworld.rviz  simulation.rviz  uav.rviz
mrim_task/mrim_manager/config/uav_names/: pair_1.yaml  pair_2.yaml  pair_3.yaml
mrim_task/mrim_manager/launch/: manager.launch
mrim_task/mrim_manager/scripts/: manager.py
mrim_task/mrim_manager/scripts/mrim_manager/: python_plotter.py  task_monitor.py  utils.py  visualizer.py
mrim_task/mrim_planner/: CMakeLists.txt  package.xml  setup.py
mrim_task/mrim_planner/config/: real_world.yaml  virtual.yaml
mrim_task/mrim_planner/launch/: planner.launch
mrim_task/mrim_planner/scripts/: data_types.py  planner.py  trajectory.py  utils.py
mrim_task/mrim_planner/scripts/path_planners/grid_based/: astar.py  grid_3d.py
mrim_task/mrim_planner/scripts/path_planners/sampling_based/: rrt.py
mrim_task/mrim_planner/scripts/solvers/: LKHInvoker.py  tsp_solvers.py
mrim_task/mrim_resources/: CMakeLists.txt  package.xml
mrim_task/mrim_resources/blender_files/: four_towers.blend  four_towers.blend1  four_towers.dae  four_towers.fbx  four_towers.stl  single_tower.blend  single_tower.blend1  single_tower.dae  single_tower.fbx  single_tower.stl
mrim_task/mrim_resources/gazebo_files/models/four_towers/: model.config  model.sdf
mrim_task/mrim_resources/gazebo_files/models/single_tower/: model.config  model.sdf
mrim_task/mrim_resources/gazebo_files/models/single_tower/meshes/: single_tower.dae
mrim_task/mrim_resources/gazebo_files/models/solar_panel/: model.config  model.sdf
mrim_task/mrim_resources/gazebo_files/models/solar_panel/meshes/: solar_panel.dae
mrim_task/mrim_resources/gazebo_files/worlds/: four_towers.world  single_tower.world
mrim_task/mrim_resources/msg/: InspectionPoint.msg  InspectionProblem.msg
mrim_task/mrim_resources/obstacles/: cisarak.asc  four_towers.asc  realworld.asc  single_tower.asc  warehouse.asc
mrim_task/mrim_resources/problems/: cisarak.problem  four_towers_large.problem  four_towers_small.problem  realworld.problem  single_chimney.problem  single_tower.problem  warehouse_large.problem  warehouse_small.problem  warehouse_yard.problem
mrim_task/mrim_resources/src/: main.cpp
mrim_task/mrim_resources/worlds/: four_towers.yaml  realworld.yaml  single_tower.yaml  warehouse.yaml  warehouse_yard.yaml
mrim_task/mrim_state_machine/: CMakeLists.txt  package.xml  plugins.xml
mrim_task/mrim_state_machine/config/: realworld.yaml  simulation.yaml  tf_connector.yaml  tf_connector_realworld.yaml  tf_connector_simulation.yaml  tf_connector_uav.yaml  uav.yaml  world.yaml
mrim_task/mrim_state_machine/launch/: basestation.launch  simulation.launch  tf_connector.launch  tf_connector_uav.launch  uav.launch
mrim_task/mrim_state_machine/src/: mrim_state_machine.cpp
simulation/: 01_install.sh  02_download.sh  03_compile.sh  apptainer.sh  kill_simulation.sh  pycharm.sh  run_offline.sh  run_simulation.sh  singularity.sh
simulation/mount/: 99-mrs_env.sh  README.md  apptainer_bashrc.sh  singularity_bashrc.sh  singularity_zshrc.sh
simulation/recipes/: build.sh  recipe.def
simulation/scripts/: create_overlay.sh
simulation/singularity_recipe/: build.sh  recipe.def
simulation/tmux_scripts/simulation/: pos_four_towers.yaml  pos_single_tower.yaml  pos_virtual_competition.yaml  session.yml  takeoff_manager.py
simulation/tmux_scripts/simulation/custom_configs/: automatic_start.yaml  constraint_manager.yaml  mpc_tracker.yaml  odometry.yaml  uav_manager.yaml  world.yaml
simulation/tmux_scripts/simulation/multirotor/: goto.py  layout.json  rviz.rviz  session.yml  start.sh
simulation/tmux_scripts/simulation/multirotor/config/: automatic_start.yaml  custom_config.yaml  hw_api.yaml  network_config.yaml  simulator_realworld.yaml  simulator_warehouse.yaml
simulation/user_ros_workspace/src/: mrim_task
