<?xml version="1.0"?>
<package format="2">

  <name>mrim_manager</name>
  <version>1.0.0</version>
  <description>High-level manager for MRIM task.</description>

  <author email="vit.kratky@fel.cvut.cz">Vit Kratky</author>
  <maintainer email="pavel.petracek@fel.cvut.cz">Pavel Petracek</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>message_runtime</depend>
  <depend>mrim_resources</depend>

  <export>
  </export>

</package>
