<?xml version="1.0"?>
<package format="2">

  <name>mrim_state_machine</name>
  <version>1.0.0</version>
  <description>MRIM state machine</description>

  <author email="pavel.petracek@fel.cvut.cz">Pavel Petracek</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>message_runtime</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mavros_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
